--- a/package.json
+++ b/package.json
@@ -1,27 +1,34 @@
 {
-    "name": "meet",
-    "version": "0.0.0",
-    "private": true,
-    "scripts": {
-        "start": "node ./bin/www"
-    },
-    "dependencies": {
-        "body-parser": "~1.17.1",
-        "cookie-parser": "~1.4.3",
-        "debug": "~2.6.3",
-        "express": "~4.15.2",
-        "http-server": "0.10.0",
-        "jade": "~1.11.0",
-        "mongoose": "4.11.11",
-        "morgan": "~1.8.1",
-        "serve-favicon": "~2.4.2"
-    },
-    "devDependencies": {
-        "gulp": "3.9.1",
-        "gulp-livereload": "3.8.1"
-    },
-    "main": "app.js",
-    "author": "",
-    "license": "ISC",
-    "description": ""
+  "name": "meet",
+  "version": "0.0.0",
+  "private": true,
+  "scripts": {
+    "start": "node ./bin/setting",
+    "dev": "./node_modules/.bin/gulp develop --gulpfile gulpfile.js",
+    "ci": "./node_modules/.bin/gulp test --gulpfile gulp_test.js",
+    "assets": "./node_modules/.bin/gulp build --gulpfile gulp_build.js",
+    "assets_dev": "./node_modules/.bin/gulp build --dev --gulpfile gulp_build.js",
+    "watch": "./node_modules/.bin/gulp watch --gulpfile gulp_build.js"
+  },
+  "dependencies": {
+    "body-parser": "~1.17.1",
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.6.3",
+    "express": "~4.15.2",
+    "http-server": "0.10.0",
+    "jade": "~1.11.0",
+    "mongoose": "4.11.11",
+    "morgan": "~1.8.1",
+    "serve-favicon": "~2.4.2"
+  },
+  "devDependencies": {
+    "ejs": "2.5.7",
+    "gulp": "3.9.1",
+    "gulp-livereload": "3.8.1",
+    "gulp-nodemon": "2.2.1"
+  },
+  "main": "app.js",
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
