--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "ejs": "2.5.7",
     "gulp": "3.9.1",
     "gulp-livereload": "3.8.1",
-    "gulp-nodemon": "2.2.1"
+    "gulp-nodemon": "2.2.1",
+    "node-static": "0.7.10"
   },
   "main": "app.js",
   "author": "",
